--- a/vignettes/biblio.bib
+++ b/vignettes/biblio.bib
@@ -23,6 +23,19 @@ keywords = {EM algorithm},
 keywords = {Block CEM algorithm}
 }
 
+@article{keribin2014estimation,
+    year={2014},
+    issn={0960-3174},
+    journal={Statistics and Computing},
+    doi={10.1007/s11222-014-9472-2},
+    title={Estimation and selection for the latent block model on categorical data},
+    url={http://dx.doi.org/10.1007/s11222-014-9472-2},
+    publisher={Springer US},
+    keywords={EM algorithm; Variational approximation; Stochastic EM; Bayesian inference; Gibbs sampling; BIC criterion; Integrated completed likelihood},
+    author={Keribin, Christine and Brault, Vincent and Celeux, Gilles and Govaert, G\'{e}rard},
+    pages={1-16},
+    language={English}
+}
 @inproceedings{rasiwasia2009holistic,
   title={Holistic Context Modeling Using Semantic Co-Occurrences},
   author={Rasiwasia, N. and Vasconcelos, N.},
